syntax = "proto3";

package satisgraphtory;

enum Recipe {

    alternate_quickwire = 0;
    alternate_steel_ingot = 1;
    alternate_screw = 2;
    steel_screw = 3;
    alternate_compacted_coal = 4;
    alternate_encased_industrial_beam = 5;
    alternate_uranium_cell = 6;
    quickwire_cable = 7;
    enriched_steel_ingot = 8;
    crystal_computer = 9;
    stitched_iron_plate = 10;
    alternate_nobelisk = 11;
    alternate_crystal_oscillator = 12;
    alternate_beacon = 13;
    alternate_turbo_motor = 14;
    alternate_highspeed_connector = 15;
    alternate_heavy_modular_frame = 16;
    alternate_silica = 17;
    alternate_concrete = 18;
    alternate_electromagnetic_control_rod = 19;
    iron_wire = 20;
    quickwire_circuit_board = 21;
    alternate_black_powder = 22;
    iron_ingot_alloy = 23;
    alternate_circuit_board = 24;
    alternate_cable = 25;
    alternate_reinforced_iron_plate = 26;
    alternate_modular_frame = 27;
    alternate_turbofuel = 28;
    caterium_wire = 29;
    wood_coal = 30;
    alternate_plastic = 31;
    alternate_stator = 32;
    alternate_motor = 33;
    alternate_heat_sink = 34;
    biomass_coal = 35;
    alternate_computer = 36;
    alternate_radio_control_unit = 37;
    alternate_rotor = 38;
    alternate_nuclear_fuel_rod = 39;
    nuclear_fuel_rod = 40;
    radio_control_unit = 41;
    iron_ingot = 42;
    circuit_board = 43;
    cable = 44;
    spiked_rebar = 45;
    copper_ingot = 46;
    quickwire = 47;
    highspeed_connector = 48;
    plastic = 49;
    steel_beam = 50;
    supercomputer = 51;
    steel_ingot = 52;
    cartridge = 53;
    motor = 54;
    biofuel = 55;
    sam_ingot = 56;
    silica = 57;
    nobelisk = 58;
    biomass_mycelia = 59;
    iodine_infused_filter = 60;
    quantum_crystal = 61;
    alclad_aluminum_sheet = 62;
    biomass_wood = 63;
    biomass_alien_organs = 64;
    biomass_alien_carapace = 65;
    aluminum_ingot = 66;
    computer = 67;
    superposition_oscillator = 68;
    iron_rod = 69;
    filter = 70;
    quantum_computer = 71;
    biomass_leaves = 72;
    encased_industrial_beam = 73;
    battery = 74;
    power_shard_2 = 75;
    turbo_motor = 76;
    screw = 77;
    black_powder = 78;
    power_shard_5 = 79;
    caterium_ingot = 80;
    heat_sink = 81;
    uranium_cell = 82;
    quartz_crystal = 83;
    sam_fluctuator = 84;
    wire = 85;
    concrete = 86;
    heavy_modular_frame = 87;
    stator = 88;
    steel_pipe = 89;
    rotor = 90;
    power_shard_1 = 91;
    modular_frame = 92;
    electromagnetic_control_rod = 93;
    fabric = 94;
    color_cartridge = 95;
    beacon = 96;
    reinforced_iron_plate = 97;
    rubber = 98;
    ai_limiter = 99;
    iron_plate = 100;
    crystal_oscillator = 101;
    fuel = 102;
    impure_bauxite_node = 103;
    normal_bauxite_node = 104;
    pure_bauxite_node = 105;
    impure_caterium_ore_node = 106;
    normal_caterium_ore_node = 107;
    pure_caterium_ore_node = 108;
    impure_coal_node = 109;
    normal_coal_node = 110;
    pure_coal_node = 111;
    impure_copper_ore_node = 112;
    normal_copper_ore_node = 113;
    pure_copper_ore_node = 114;
    impure_crude_oil_node = 115;
    normal_crude_oil_node = 116;
    pure_crude_oil_node = 117;
    impure_iron_ore_node = 118;
    normal_iron_ore_node = 119;
    pure_iron_ore_node = 120;
    impure_limestone_node = 121;
    normal_limestone_node = 122;
    pure_limestone_node = 123;
    impure_raw_quartz_node = 124;
    normal_raw_quartz_node = 125;
    pure_raw_quartz_node = 126;
    impure_sam_ore_node = 127;
    normal_sam_ore_node = 128;
    pure_sam_ore_node = 129;
    impure_sulfur_node = 130;
    normal_sulfur_node = 131;
    pure_sulfur_node = 132;
    impure_uranium_node = 133;
    normal_uranium_node = 134;
    pure_uranium_node = 135;
}

enum MachineClass {

    assembler = 0;
    biomass_burner = 1;
    coal_generator = 2;
    constructor = 3;
    converter = 4;
    foundry = 5;
    fuel_generator = 6;
    geo_thermal_generator = 7;
    hadron_collider = 8;
    industrial_storage_container = 9;
    manufacturer = 10;
    miner = 11;
    nuclear_power_plant = 12;
    oil_pump = 13;
    oil_refinery = 14;
    quantum_encoder = 15;
    remote_storage = 16;
    smelter = 17;
    storage_container = 18;
}

enum Item {

    ai_limiter = 0;
    alclad_aluminum_sheet = 1;
    alien_carapace = 2;
    alien_organs = 3;
    aluminum_ingot = 4;
    bacon_agaric = 5;
    battery = 6;
    bauxite = 7;
    beacon = 8;
    biofuel = 9;
    biomass = 10;
    black_powder = 11;
    blade_runners = 12;
    cable = 13;
    cartridge = 14;
    caterium_ingot = 15;
    caterium_ore = 16;
    chainsaw = 17;
    circuit_board = 18;
    coal = 19;
    color_cartridge = 20;
    color_gun = 21;
    compacted_coal = 22;
    computer = 23;
    concrete = 24;
    copper_ingot = 25;
    copper_ore = 26;
    crude_oil = 27;
    crystal_oscillator = 28;
    dark_matter = 29;
    electromagnetic_control_rod = 30;
    encased_industrial_beam = 31;
    fabric = 32;
    filter = 33;
    flower_petals = 34;
    fuel = 35;
    gas_mask = 36;
    green_power_slug = 37;
    gunpowder = 38;
    hazmat_filter = 39;
    hazmat_suit = 40;
    heat_sink = 41;
    heavy_modular_frame = 42;
    highspeed_connector = 43;
    iodine_infused_filter = 44;
    iron_ingot = 45;
    iron_ore = 46;
    iron_plate = 47;
    iron_rod = 48;
    jetpack = 49;
    leaves = 50;
    limestone = 51;
    machinegun = 52;
    medicinal_inhaler = 53;
    modular_frame = 54;
    motor = 55;
    mycelia = 56;
    nobelisk = 57;
    nobelisk_detonator = 58;
    nuclear_fuel_rod = 59;
    object_scanner = 60;
    parachute = 61;
    plastic = 62;
    portable_miner = 63;
    power_shard = 64;
    purple_power_slug = 65;
    quantum_computer = 66;
    quantum_crystal = 67;
    quartz_crystal = 68;
    quickwire = 69;
    quickwire_computer = 70;
    radio_control_unit = 71;
    raw_quartz = 72;
    rebar_gun = 73;
    rebar_scatter_gun = 74;
    reinforced_iron_plate = 75;
    rifle = 76;
    rifle_mk2 = 77;
    rotor = 78;
    rubber = 79;
    sam_fluctuator = 81;
    sam_ingot = 82;
    sam_ore = 83;
    screw = 84;
    silica = 85;
    spiked_rebar = 86;
    stator = 87;
    steel_beam = 88;
    steel_ingot = 89;
    steel_pipe = 90;
    sulfur = 91;
    supercomputer = 92;
    superposition_oscillator = 93;
    turbo_motor = 94;
    turbofuel = 95;
    uranium = 96;
    uranium_cell = 97;
    wire = 98;
    wood = 99;
    xenobasher = 100;
    xenozapper = 101;
    yellow_power_slug = 102;
}